# screen-saver-block-rust

./: .gitignore  Cargo.toml  README.md  build-msvc.cmd  build.rs
.github/workflows/: release-windows.yml
src/: main.rs
