[package]
name = "screen-saver-blocker-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.28", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Shutdown",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
